--- a/schoolnet_coeff_static_friction/assets/css/device.css
+++ b/schoolnet_coeff_static_friction/assets/css/device.css
@@ -253,7 +253,9 @@ img.weightImage {
     .col-sm-12 {
         width: auto;
     }
-
+    .col-md-4 {
+        width: 33.33333333%;
+    }
     img.hookImage {
         height: 50px;
     }
