--- a/Coefficient of Static Friction – Inclined Plane/assets/css/style.css
+++ b/Coefficient of Static Friction – Inclined Plane/assets/css/style.css
@@ -1225,7 +1225,7 @@ svg .cls-101 {
 
 .rotatingDiv.moveObj .weight_image {
 
-    animation: 3s linear 0s slide;
+    animation: 10s ease-in 0.5s slide;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
@@ -1303,7 +1303,7 @@ svg .cls-101 {
     position: absolute;
     z-index: 3;
     position: absolute;
-    top: 141px;
+    top: 144px;
     left: 253px;
     font-family: 'Montserrat-Bold';
     color: #ffffff;
@@ -1347,7 +1347,7 @@ svg .cls-101 {
     }
 
     to {
-        left: 180px;
+        left: 140px;
         transform: translateX(-100%);
     }
 
@@ -1521,7 +1521,7 @@ svg .cls-101 {
         }
 
         to {
-            left: 140px;
+            left: 130px;
             transform: translateX(-100%);
             background: blue;
         }
